test/programs/error-ellipses-2-3.defs
(def (flatten (list (list $x ..) ..))
  (list $x .. .. ..))